--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -442,11 +442,16 @@ nav a {
     text-decoration: none;
     font-size: 1.25rem;
     font-weight: 500;
-    transition: color 0.3s;
+    border: none;
+    border-radius: 0.25rem;
+    background-color: transparent;
+    padding: 1rem;
+    transition: color 0.3s, background-color 0.3s;
 }
 
 nav a:hover {
     color: var(--primary-500);
+    background-color: var(--black-sightly-dark);
 }
 
 .nav-menu {
@@ -455,25 +460,31 @@ nav a:hover {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 0.5rem;
 }
 
+/* Somehow doesn't wanna grow vertically. Will need a fix for a clean design */
 .nav-menu-left {
-    padding: 1rem 0;
+    height: 100%;
+    display: flex;
 }
 
 .nav-items {
     display: flex;
-    gap: 1rem;
     list-style-type: none;
+    gap: .5rem;
+    height: 100%;
     padding: 0;
 }
 
 .nav-brand > a {
+    margin-left: 0.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 0.5rem;
-    padding: 1rem;
+    height: 100%;
+    padding: 0.5rem;
     color: var(--text-color);
     transition: color 0.3s, transform 0.3s;
 }
@@ -492,14 +503,23 @@ nav a:hover {
     margin: 0;
 }
 
-.nav-item {
+.nav-item.icon {
+    padding: 1rem;
+    border: none;
+    background-color: transparent;
+    font-size: 1.25rem;
+    color: var(--primary-200);
+    border-radius: 0.25rem;
+    transition: color 0.3s, background-color 0.3s;
+    cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.nav-item.icon {
-    padding: 1rem;
+.nav-item.icon:hover {
+    color: var(--primary-500);
+    background-color: var(--black-sightly-dark);
 }
 
 /* Footer */
@@ -638,4 +658,49 @@ footer > * + *::before {
 .error p {
     font-weight: 400;
 
+}
+
+/* Settings Pane */
+
+.settings-pane {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1rem;
+    background-color: var(--black-dark);
+    border-radius: 0.5rem;
+    color: var(--text-color);
+    height: 100%;
+    width: 100%;
+    z-index: 1000;
+    position: fixed;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s, visibility 0.3s;
+}
+
+.settings-pane.active {
+    opacity: 1;
+    visibility: visible;
+}
+
+.settings-pane .close {
+    position: absolute;
+    top: 0.5rem;
+    right: 0.5rem;
+    padding: 1rem;
+    color: var(--primary-200);
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
+    font-size: 1.25rem;
+    border-radius: 0.25rem;
+    transition: color 0.3s, background-color 0.3s;
+}
+
+.settings-pane .close:hover {
+    color: var(--primary-500);
+    background-color: var(--black-sightly-dark);
 }
