--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -165,6 +165,10 @@ header.hidden .open {
     visibility: visible;
 }
 
+footer.hidden {
+    display: none;
+}
+
 .container {
     display: flex;
     justify-content: flex-start;
@@ -177,6 +181,27 @@ header.hidden .open {
 .container.center {
     justify-content: center;
     align-items: center;
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.row.strict {
+    flex-wrap: nowrap;
+}
+
+@media (max-width: 768px) {
+    .row.strict {
+        flex-wrap: wrap;
+    }
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
 }
 
 h1 {
@@ -384,6 +409,54 @@ h1 {
     padding-bottom: 2rem;
 }
 
+.pt-0 {
+    padding-top: 0;
+}
+
+.pt-1 {
+    padding-top: 0.25rem;
+}
+
+.pt-2 {
+    padding-top: 0.5rem;
+}
+
+.pt-3 {
+    padding-top: 1rem;
+}
+
+.pt-4 {
+    padding-top: 1.5rem;
+}
+
+.pt-5 {
+    padding-top: 2rem;
+}
+
+.pb-0 {
+    padding-bottom: 0;
+}
+
+.pb-1 {
+    padding-bottom: 0.25rem;
+}
+
+.pb-2 {
+    padding-bottom: 0.5rem;
+}
+
+.pb-3 {
+    padding-bottom: 1rem;
+}
+
+.pb-4 {
+    padding-bottom: 1.5rem;
+}
+
+.pb-5 {
+    padding-bottom: 2rem;
+}
+
 .mx-0 {
     margin-left: 0;
     margin-right: 0;
@@ -412,6 +485,128 @@ h1 {
 .mx-5 {
     margin-left: 2rem;
     margin-right: 2rem;
+}
+
+.my-0 {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.my-1 {
+    margin-top: 0.25rem;
+    margin-bottom: 0.25rem;
+}
+
+.my-2 {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+
+.my-3 {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.my-4 {
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+}
+
+.my-5 {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+.mt-0 {
+    margin-top: 0;
+}
+
+.mt-1 {
+    margin-top: 0.25rem;
+}
+
+.mt-2 {
+    margin-top: 0.5rem;
+}
+
+.mt-3 {
+    margin-top: 1rem;
+}
+
+.mt-4 {
+    margin-top: 1.5rem;
+}
+
+.mt-5 {
+    margin-top: 2rem;
+}
+
+.mb-0 {
+    margin-bottom: 0;
+}
+
+.mb-1 {
+    margin-bottom: 0.25rem;
+}
+
+.mb-2 {
+    margin-bottom: 0.5rem;
+}
+
+.mb-3 {
+    margin-bottom: 1rem;
+}
+
+.mb-4 {
+    margin-bottom: 1.5rem;
+}
+
+.mb-5 {
+    margin-bottom: 2rem;
+}
+
+.gap-0 {
+    gap: 0;
+}
+
+.gap-1 {
+    gap: 0.25rem;
+}
+
+.gap-2 {
+    gap: 0.5rem;
+}
+
+.gap-3 {
+    gap: 1rem;
+}
+
+.gap-4 {
+    gap: 1.5rem;
+}
+
+.gap-5 {
+    gap: 2rem;
+}
+
+.w-100 {
+    width: 100%;
+}
+
+.h-100 {
+    height: 100%;
+}
+
+.w-auto {
+    width: auto;
+}
+
+.h-auto {
+    height: auto;
+}
+
+.capitalize {
+    text-transform: capitalize;
 }
 
 /* Library */
@@ -483,6 +678,41 @@ h1 {
 .manga-btn:hover {
     color: var(--primary-500);
     background-color: var(--black-sightly-dark);
+}
+
+.manga-cover {
+    border-radius: 0.5rem;
+}
+
+.volumes-list {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    background-color: var(--black-dark);
+    border-radius: 0.5rem;
+    color: var(--text-color);
+    width: 100%;
+}
+
+.manga-volume {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 0.5rem;
+    padding: 0.5rem;
+}
+
+.volumes-list .manga-volume + .manga-volume {
+    border-top: 1px solid var(--black);
+}
+
+.manga-volume:first-child {
+    padding-top: 0;
+}
+
+.manga-volume:last-child {
+    padding-bottom: 0;
 }
 
 /* Header */
@@ -635,6 +865,11 @@ footer > * + *::before {
     font-weight: 600;
     outline: none;
     transition: background-color 0.3s, color 0.3s, outline-offset 0.05s ease;
+}
+
+.btn-small {
+    padding: 0.25rem 0.5rem;
+    font-size: 1rem;
 }
 
 .btn:hover {
