--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -209,6 +209,10 @@ h1 {
     margin-bottom: 1rem;
 }
 
+h2 {
+    margin-bottom: 1rem;
+}
+
 ::-webkit-scrollbar {
     height: 10px;
     width: 10px;
