--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -105,6 +105,12 @@ body {
     line-height: 1.5;
     color: var(--text-color);
     background-color: var(--bg-color);
+    overflow: hidden !important;
+}
+
+.content {
+    overflow: hidden scroll;
+    height: calc(100vh - 2rem);
 }
 
 section {
@@ -211,6 +217,63 @@ h1 {
 
 h2 {
     margin-bottom: 1rem;
+}
+
+.titlebar {
+    height: 2rem;
+    background: var(--black-dark);
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 9999;
+}
+
+.titlebar > * {
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.titlebar-items {
+    display: flex;
+    flex-direction: row;
+    gap: 0.5rem;
+    padding: 0.5rem;
+    margin: 0;
+}
+
+.titlebar-actions {
+    display: flex;
+    flex-direction: row;
+    gap: 0;
+    padding: 0;
+    margin: 0;
+}
+
+.titlebar-icon {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 0.5rem;
+    color: var(--primary-200);
+    cursor: pointer;
+    transition: color 0.3s, background-color 0.3s;
+    border: none;
+    background-color: transparent;
+}
+
+.titlebar-icon:hover {
+    color: var(--primary-500);
+    background-color: var(--black-sightly-dark);
+}
+
+.titlebar h1 {
+    font-size: .75rem;
+    font-weight: 500;
+    cursor: default;
+    margin: 0;
 }
 
 ::-webkit-scrollbar {
@@ -637,6 +700,7 @@ h2 {
 .manga {
     display: flex;
     flex-direction: column;
+    flex-shrink: 0;
     gap: 0.5rem;
     padding: 1rem;
     margin: 0 .5rem;
@@ -644,7 +708,7 @@ h2 {
     border-radius: 0.5rem;
     color: var(--text-color);
     transition: transform 0.3s;
-    width: 175px;
+    width: fit-content;
 }
 
 .manga:hover {
@@ -803,32 +867,6 @@ nav a:hover {
     padding: 0;
 }
 
-.nav-brand > a {
-    margin-left: 0.5rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 0.5rem;
-    height: 100%;
-    padding: 0.5rem;
-    color: var(--text-color);
-    transition: color 0.3s, transform 0.3s;
-}
-
-.nav-brand > a:hover {
-    color: var(--text-color);
-    transform: scale(1.05);
-}
-
-.nav-brand .neko {
-    color: var(--primary-500) !important;
-}
-
-.nav-brand h1 {
-    font-size: 1.5rem;
-    margin: 0;
-}
-
 .nav-item.icon {
     padding: 1rem;
     border: none;
@@ -846,6 +884,10 @@ nav a:hover {
 .nav-item.icon:hover {
     color: var(--primary-500);
     background-color: var(--black-sightly-dark);
+}
+
+.open-menu {
+    display: none;
 }
 
 /* Footer */
