--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -226,7 +226,7 @@ h2 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    z-index: 9999;
+    z-index: 1000;
 }
 
 .titlebar > * {
@@ -1041,13 +1041,13 @@ footer > * + *::before {
     gap: 1rem;
     padding: 1rem;
     background-color: var(--black-dark);
-    border-radius: 0.5rem;
+    border-radius: 0;
     color: var(--text-color);
-    height: 100%;
+    height: calc(100% - 2rem);
     width: 100%;
-    z-index: 1000;
+    z-index: 100;
     position: fixed;
-    top: 0;
+    bottom: 0;
     left: 0;
     opacity: 0;
     visibility: hidden;
