feat: rewrite of the electron part

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -113,6 +113,10 @@ body {
     height: calc(100vh - 2rem);
 }
 
+.content.no-scroll {
+    overflow: hidden;
+}
+
 section {
     max-width: 100%;
 }
@@ -179,7 +183,7 @@ footer.hidden {
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
-    min-height: 100vh;
+    min-height: calc(100vh - 2rem);
     flex-direction: column;
     padding: 1rem;
 }
@@ -771,6 +775,10 @@ h2 {
     padding: 0.5rem;
 }
 
+.manga-volume.no-volume {
+    color: var(--black-lightest);
+}
+
 .volumes-list .manga-volume + .manga-volume {
     border-top: 1px solid var(--black);
 }
@@ -1039,7 +1047,7 @@ footer > * + *::before {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    padding: 1rem;
+    padding: 1rem calc(1rem + 10px) 1rem 1rem;
     background-color: var(--black-dark);
     border-radius: 0;
     color: var(--text-color);
@@ -1062,7 +1070,7 @@ footer > * + *::before {
 .settings-pane .close {
     position: absolute;
     top: 0.5rem;
-    right: 0.5rem;
+    right: calc(0.5rem + 10px);
     padding: 1rem;
     color: var(--primary-200);
     cursor: pointer;
