--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -87,7 +87,9 @@
     --bg-color: var(--black);
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
@@ -99,8 +101,13 @@
     outline-offset: 0.25rem;
 }
 
+::selection {
+    background-color: var(--primary-200);
+    color: var(--black);
+}
+
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     font-size: 16px;
     line-height: 1.5;
     color: var(--text-color);
@@ -145,7 +152,11 @@ header .open {
     box-shadow: 0 5px 15px -5px rgba(0, 0, 0, 0.5);
     border: none;
     border-radius: 0.25rem;
-    transition: opacity 0.3s, visibility 0.3s, color 0.3s, background-color 0.3s;
+    transition:
+        opacity 0.3s,
+        visibility 0.3s,
+        color 0.3s,
+        background-color 0.3s;
 }
 
 header .open:hover {
@@ -231,6 +242,7 @@ h2 {
     justify-content: space-between;
     align-items: center;
     z-index: 1000;
+    -webkit-app-region: drag;
 }
 
 .titlebar > * {
@@ -253,6 +265,7 @@ h2 {
     gap: 0;
     padding: 0;
     margin: 0;
+    -webkit-app-region: no-drag;
 }
 
 .titlebar-icon {
@@ -263,8 +276,12 @@ h2 {
     padding: 0.5rem;
     color: var(--primary-200);
     cursor: pointer;
-    transition: color 0.3s, background-color 0.3s;
+    transition:
+        color 0.3s,
+        background-color 0.3s;
     border: none;
+    height: 2rem;
+    width: 2rem;
     background-color: transparent;
 }
 
@@ -274,7 +291,7 @@ h2 {
 }
 
 .titlebar h1 {
-    font-size: .75rem;
+    font-size: 0.75rem;
     font-weight: 500;
     cursor: default;
     margin: 0;
@@ -707,7 +724,7 @@ h2 {
     flex-shrink: 0;
     gap: 0.5rem;
     padding: 1rem;
-    margin: 0 .5rem;
+    margin: 0 0.5rem;
     background-color: var(--black-dark);
     border-radius: 0.5rem;
     color: var(--text-color);
@@ -737,14 +754,16 @@ h2 {
     justify-content: center;
     align-items: center;
     width: 100%;
-    padding: .25rem 0;
+    padding: 0.25rem 0;
     margin: 0;
     border: none;
     text-decoration: none;
     color: var(--primary-200);
     background-color: var(--black);
     border-radius: 0.25rem;
-    transition: color 0.3s, background-color 0.3s;
+    transition:
+        color 0.3s,
+        background-color 0.3s;
 }
 
 .manga-btn:hover {
@@ -798,7 +817,8 @@ h2 {
     flex-wrap: wrap;
 }
 
-.genre, .author {
+.genre,
+.author {
     padding: 0.25rem 0.5rem;
     border-radius: 0.25rem;
     background-color: var(--black-sightly-dark);
@@ -806,7 +826,9 @@ h2 {
     font-size: 0.75rem;
     width: fit-content;
     cursor: pointer;
-    transition: color 0.3s, background-color 0.3s;
+    transition:
+        color 0.3s,
+        background-color 0.3s;
 }
 
 .manga-infos h1 {
@@ -818,7 +840,8 @@ h2 {
     margin-top: 0.5rem;
 }
 
-.genre:hover, .author:hover {
+.genre:hover,
+.author:hover {
     color: var(--primary-500);
     background-color: var(--black-dark);
 }
@@ -844,7 +867,9 @@ nav a {
     border-radius: 0.25rem;
     background-color: transparent;
     padding: 1rem;
-    transition: color 0.3s, background-color 0.3s;
+    transition:
+        color 0.3s,
+        background-color 0.3s;
 }
 
 nav a:hover {
@@ -870,7 +895,7 @@ nav a:hover {
 .nav-items {
     display: flex;
     list-style-type: none;
-    gap: .5rem;
+    gap: 0.5rem;
     height: 100%;
     padding: 0;
 }
@@ -882,7 +907,9 @@ nav a:hover {
     font-size: 1.25rem;
     color: var(--primary-200);
     border-radius: 0.25rem;
-    transition: color 0.3s, background-color 0.3s;
+    transition:
+        color 0.3s,
+        background-color 0.3s;
     cursor: pointer;
     display: flex;
     align-items: center;
@@ -918,10 +945,10 @@ footer > * {
 }
 
 footer > * + *::before {
-    content: '';
+    content: "";
     width: 1px;
     height: 1rem;
-    left: calc(-0.50rem - 1px);
+    left: calc(-0.5rem - 1px);
     top: 50%;
     transform: translateY(-50%);
     background-color: var(--text-color);
@@ -942,7 +969,7 @@ footer > * + *::before {
     justify-content: center;
     border: none;
     border-radius: 0.5rem;
-    padding: .5rem 1rem;
+    padding: 0.5rem 1rem;
     text-decoration: none;
     color: var(--btn-color);
     cursor: pointer;
@@ -950,7 +977,10 @@ footer > * + *::before {
     font-size: 1.15rem;
     font-weight: 600;
     outline: none;
-    transition: background-color 0.3s, color 0.3s, outline-offset 0.05s ease;
+    transition:
+        background-color 0.3s,
+        color 0.3s,
+        outline-offset 0.05s ease;
 }
 
 .btn-small {
@@ -963,7 +993,8 @@ footer > * + *::before {
     background-color: var(--btn-hover-bg);
 }
 
-.btn:active, .btn:focus {
+.btn:active,
+.btn:focus {
     outline: 2px solid var(--btn-bg);
     outline-offset: 0.25rem;
 }
@@ -1029,7 +1060,7 @@ footer > * + *::before {
 }
 
 .error .special {
-    color: var(--danger)
+    color: var(--danger);
 }
 
 .error .oops {
@@ -1038,7 +1069,6 @@ footer > * + *::before {
 
 .error p {
     font-weight: 400;
-
 }
 
 /* Settings Pane */
@@ -1059,7 +1089,9 @@ footer > * + *::before {
     left: 0;
     opacity: 0;
     visibility: hidden;
-    transition: opacity 0.3s, visibility 0.3s;
+    transition:
+        opacity 0.3s,
+        visibility 0.3s;
 }
 
 .settings-pane.active {
@@ -1078,7 +1110,9 @@ footer > * + *::before {
     background-color: transparent;
     font-size: 1.25rem;
     border-radius: 0.25rem;
-    transition: color 0.3s, background-color 0.3s;
+    transition:
+        color 0.3s,
+        background-color 0.3s;
 }
 
 .settings-pane .close:hover {
